
  * debian/control, debian/dirs => debian/pictor.dirs, debian/install =>
    debian/pictor.install, debian/links => debian/pictor.links,
    debian/pictor-unload.install, debian/pictor-unload.manpages,
    debian/postinst => debian/pictor.postinst, debian/postrm =>
    debian/pictor.postrm:
    - separate pictor-unload to a separate, stand-alone package
  * debian/rules: install manpages

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 14 Dec 2010 11:48:03 -0600

pictor (2.9-0ubuntu1) natty; urgency=low

  * index.php, settings.php: change default flipbook image size from
    640 to 800; add a configurable variable to control this
  * index.php: move upper bar to just below picture, to try and get more
    of the image on the first page; darken the background color
  * debian/control, debian/copyright, debian/install, debian/links,
    index.php, next.png, prev.png: use the new famfamfam-silk package
  * debian/control, debian/copyright: fix lintian warnings

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 14 Dec 2010 11:47:58 -0600

pictor (2.8-0ubuntu1) maverick; urgency=low

  * debian/install, pictor-unload, pictor-unload.1: add a script that
    helps unload files from a source media, renaming them appropriately
    and optionally unmounting the media when done
  * index.php: allow for client to override thumb columns

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 25 Sep 2010 11:38:21 -0700

pictor (2.7-0ubuntu1) maverick; urgency=low

  * index.php: drop the unecessary title at the top
  * camera.png, debian/copyright, debian/install, favicon.ico, index.php,
    next.png, prev.png: add a favicon, next and previous buttons, update
    copyright to add famfamfam

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 24 Aug 2010 15:28:58 -0400

pictor (2.6-0ubuntu1) lucid; urgency=low

  * index.php: scale images to bestfit=true

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 15 Feb 2010 19:37:24 -0600

pictor (2.5-0ubuntu1) lucid; urgency=low
