@@ -3,7 +3,7 @@ Section: web
 Priority: optional
 Maintainer: Dustin Kirkland <kirkland@ubuntu.com>
 Standards-Version: 3.9.1
-Build-Depends: debhelper (>= 6.0)
+Build-Depends: debhelper (>= 7)
 Homepage: http://launchpad.net/pictor
 Vcs-Bzr: http://bazaar.launchpad.net/~kirkland/pictor/main
 
