@@ -7,6 +7,7 @@ pictor (2.10) unreleased; urgency=low
     debian/pictor.postrm:
     - separate pictor-unload to a separate, stand-alone package
   * debian/rules: install manpages
+  * debian/control, debian/rules: migrate to debhelper 7
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 14 Dec 2010 11:48:03 -0600
 
